--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,8 @@
   background-color: #434343;
   background-image: linear-gradient(147deg, #434343 0%, rgb(15,15,15) 74%);
   border-radius: 15px 15px 0 0;
-  flex-grow: 3;
+  width: 320px;
+  height: 208px;
   justify-content: flex-end;
   align-items: end;
   padding: 5px;
