--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,15 @@
   align-items: end;
   padding: 5px;
   box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
+  position: relative;
+  }
+  #operator{
+    position: absolute;
+    font-family: futura-pt, sans-serif;
+    font-size: 50px;
+    color: white;
+    top: 20px;
+    left: 30px;
   }
 .result{
   font-size: 60px;
