--- a/styles.css
+++ b/styles.css
@@ -160,6 +160,30 @@
     -ms-user-select: none;
     /* Internet Explorer/Edge */
 }
+.operator{
+  display: flex;
+  font-size: 35px;
+  width: 100%;
+  height: 100%;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  font-family: futura-pt, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  vertical-align: baseline;
+  text-align: center;
+  user-select: none;
+  /* supported by Chrome and Opera */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+}
 .divider{
   height: 10px;
 }
@@ -214,7 +238,7 @@
         220,
         220) 0%, rgb(255,255,255) 74%);
 }
-.blck-txt{
+#clear{
   color: black;
 }
 /* Specific Sizing/ Spacing */
