--- a/styles.css
+++ b/styles.css
@@ -275,6 +275,30 @@
 #clear{
   color: black;
 }
+#plusMinus{
+  display: flex;
+  font-size: 35px;
+  width: 100%;
+  height: 100%;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  font-family: futura-pt, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  vertical-align: baseline;
+  text-align: center;
+  user-select: none;
+  /* supported by Chrome and Opera */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+}
 /* Specific Sizing/ Spacing */
 .grow2{
   flex-grow: 2;
